Update Mozilla Rhino commit 3678