@@ -10,6 +10,7 @@ import org.mozilla.javascript.Callable;
 import org.mozilla.javascript.ConsString;
 import org.mozilla.javascript.Context;
 import org.mozilla.javascript.ContextFactory;
+import org.mozilla.javascript.ES6Generator;
 import org.mozilla.javascript.Function;
 import org.mozilla.javascript.JavaScriptException;
 import org.mozilla.javascript.NativeFunction;
@@ -19,31 +20,15 @@ import org.mozilla.javascript.Script;
 import org.mozilla.javascript.ScriptRuntime;
 import org.mozilla.javascript.Scriptable;
 import org.mozilla.javascript.ScriptableObject;
+import org.mozilla.javascript.Undefined;
 
-/**
- * <p>OptRuntime class.</p>
- *
- * @author utente
- * @version $Id: $Id
- */
 public final class OptRuntime extends ScriptRuntime
 {
-
-    /** Constant zeroObj */
-    public static final Double zeroObj = new Double(0.0);
-    /** Constant oneObj */
-    public static final Double oneObj = new Double(1.0);
-    /** Constant minusOneObj */
-    public static final Double minusOneObj = new Double(-1.0);
+    public static final Double oneObj = Double.valueOf(1.0);
+    public static final Double minusOneObj = Double.valueOf(-1.0);
 
     /**
      * Implement ....() call shrinking optimizer code.
-     *
-     * @param fun a {@link org.mozilla.javascript.Callable} object.
-     * @param thisObj a {@link org.mozilla.javascript.Scriptable} object.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @return a {@link java.lang.Object} object.
      */
     public static Object call0(Callable fun, Scriptable thisObj,
                                Context cx, Scriptable scope)
@@ -53,13 +38,6 @@ public final class OptRuntime extends ScriptRuntime
 
     /**
      * Implement ....(arg) call shrinking optimizer code.
-     *
-     * @param fun a {@link org.mozilla.javascript.Callable} object.
-     * @param thisObj a {@link org.mozilla.javascript.Scriptable} object.
-     * @param arg0 a {@link java.lang.Object} object.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @return a {@link java.lang.Object} object.
      */
     public static Object call1(Callable fun, Scriptable thisObj, Object arg0,
                                Context cx, Scriptable scope)
@@ -69,14 +47,6 @@ public final class OptRuntime extends ScriptRuntime
 
     /**
      * Implement ....(arg0, arg1) call shrinking optimizer code.
-     *
-     * @param fun a {@link org.mozilla.javascript.Callable} object.
-     * @param thisObj a {@link org.mozilla.javascript.Scriptable} object.
-     * @param arg0 a {@link java.lang.Object} object.
-     * @param arg1 a {@link java.lang.Object} object.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @return a {@link java.lang.Object} object.
      */
     public static Object call2(Callable fun, Scriptable thisObj,
                                Object arg0, Object arg1,
@@ -87,13 +57,6 @@ public final class OptRuntime extends ScriptRuntime
 
     /**
      * Implement ....(arg0, arg1, ...) call shrinking optimizer code.
-     *
-     * @param fun a {@link org.mozilla.javascript.Callable} object.
-     * @param thisObj a {@link org.mozilla.javascript.Scriptable} object.
-     * @param args an array of {@link java.lang.Object} objects.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @return a {@link java.lang.Object} object.
      */
     public static Object callN(Callable fun, Scriptable thisObj,
                                Object[] args,
@@ -104,12 +67,6 @@ public final class OptRuntime extends ScriptRuntime
 
     /**
      * Implement name(args) call shrinking optimizer code.
-     *
-     * @param args an array of {@link java.lang.Object} objects.
-     * @param name a {@link java.lang.String} object.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @return a {@link java.lang.Object} object.
      */
     public static Object callName(Object[] args, String name,
                                   Context cx, Scriptable scope)
@@ -121,11 +78,6 @@ public final class OptRuntime extends ScriptRuntime
 
     /**
      * Implement name() call shrinking optimizer code.
-     *
-     * @param name a {@link java.lang.String} object.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @return a {@link java.lang.Object} object.
      */
     public static Object callName0(String name,
                                    Context cx, Scriptable scope)
@@ -137,12 +89,6 @@ public final class OptRuntime extends ScriptRuntime
 
     /**
      * Implement x.property() call shrinking optimizer code.
-     *
-     * @param value a {@link java.lang.Object} object.
-     * @param property a {@link java.lang.String} object.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @return a {@link java.lang.Object} object.
      */
     public static Object callProp0(Object value, String property,
                                    Context cx, Scriptable scope)
@@ -152,13 +98,6 @@ public final class OptRuntime extends ScriptRuntime
         return f.call(cx, scope, thisObj, ScriptRuntime.emptyArgs);
     }
 
-    /**
-     * <p>add.</p>
-     *
-     * @param val1 a {@link java.lang.Object} object.
-     * @param val2 a double.
-     * @return a {@link java.lang.Object} object.
-     */
     public static Object add(Object val1, double val2)
     {
         if (val1 instanceof Scriptable)
@@ -168,13 +107,6 @@ public final class OptRuntime extends ScriptRuntime
         return new ConsString((CharSequence)val1, toString(val2));
     }
 
-    /**
-     * <p>add.</p>
-     *
-     * @param val1 a double.
-     * @param val2 a {@link java.lang.Object} object.
-     * @return a {@link java.lang.Object} object.
-     */
     public static Object add(double val1, Object val2)
     {
         if (val2 instanceof Scriptable)
@@ -184,7 +116,9 @@ public final class OptRuntime extends ScriptRuntime
         return new ConsString(toString(val1), (CharSequence)val2);
     }
 
-    /** {@inheritDoc} */
+    /**
+     * @deprecated Use {@link #elemIncrDecr(Object, double, Context, Scriptable, int)} instead
+     */
     @Deprecated
     public static Object elemIncrDecr(Object obj, double index,
                                       Context cx, int incrDecrMask)
@@ -192,7 +126,6 @@ public final class OptRuntime extends ScriptRuntime
         return elemIncrDecr(obj, index, cx, getTopCallScope(cx), incrDecrMask);
     }
 
-    /** {@inheritDoc} */
     public static Object elemIncrDecr(Object obj, double index,
                                       Context cx, Scriptable scope,
                                       int incrDecrMask)
@@ -201,48 +134,23 @@ public final class OptRuntime extends ScriptRuntime
                                           incrDecrMask);
     }
 
-    /**
-     * <p>padStart.</p>
-     *
-     * @param currentArgs an array of {@link java.lang.Object} objects.
-     * @param count a int.
-     * @return an array of {@link java.lang.Object} objects.
-     */
     public static Object[] padStart(Object[] currentArgs, int count) {
         Object[] result = new Object[currentArgs.length + count];
         System.arraycopy(currentArgs, 0, result, count, currentArgs.length);
         return result;
     }
 
-    /**
-     * <p>initFunction.</p>
-     *
-     * @param fn a {@link org.mozilla.javascript.NativeFunction} object.
-     * @param functionType a int.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     */
     public static void initFunction(NativeFunction fn, int functionType,
                                     Scriptable scope, Context cx)
     {
         ScriptRuntime.initFunction(cx, scope, fn, functionType, false);
     }
 
-    /**
-     * <p>bindThis.</p>
-     *
-     * @param fn a {@link org.mozilla.javascript.NativeFunction} object.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @param thisObj a {@link org.mozilla.javascript.Scriptable} object.
-     * @return a {@link org.mozilla.javascript.Function} object.
-     */
     public static Function bindThis(NativeFunction fn, Context cx, Scriptable scope, Scriptable thisObj)
     {
         return new ArrowFunction(cx, scope, fn, thisObj);
     }
 
-    /** {@inheritDoc} */
     public static Object callSpecial(Context cx, Callable fun,
                                      Scriptable thisObj, Object[] args,
                                      Scriptable scope,
@@ -254,17 +162,6 @@ public final class OptRuntime extends ScriptRuntime
                                          fileName, lineNumber);
     }
 
-    /**
-     * <p>newObjectSpecial.</p>
-     *
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param fun a {@link java.lang.Object} object.
-     * @param args an array of {@link java.lang.Object} objects.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @param callerThis a {@link org.mozilla.javascript.Scriptable} object.
-     * @param callType a int.
-     * @return a {@link java.lang.Object} object.
-     */
     public static Object newObjectSpecial(Context cx, Object fun,
                                           Object[] args, Scriptable scope,
                                           Scriptable callerThis, int callType)
@@ -272,12 +169,6 @@ public final class OptRuntime extends ScriptRuntime
         return ScriptRuntime.newSpecial(cx, fun, args, scope, callType);
     }
 
-    /**
-     * <p>wrapDouble.</p>
-     *
-     * @param num a double.
-     * @return a {@link java.lang.Double} object.
-     */
     public static Double wrapDouble(double num)
     {
         if (num == 0.0) {
@@ -329,16 +220,6 @@ public final class OptRuntime extends ScriptRuntime
         return array;
     }
 
-    /**
-     * <p>newArrayLiteral.</p>
-     *
-     * @param objects an array of {@link java.lang.Object} objects.
-     * @param encodedInts a {@link java.lang.String} object.
-     * @param skipCount a int.
-     * @param cx a {@link org.mozilla.javascript.Context} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @return a {@link org.mozilla.javascript.Scriptable} object.
-     */
     public static Scriptable newArrayLiteral(Object[] objects,
                                              String encodedInts,
                                              int skipCount,
@@ -349,12 +230,6 @@ public final class OptRuntime extends ScriptRuntime
         return newArrayLiteral(objects, skipIndexces, cx, scope);
     }
 
-    /**
-     * <p>main.</p>
-     *
-     * @param script a {@link org.mozilla.javascript.Script} object.
-     * @param args an array of {@link java.lang.String} objects.
-     */
     public static void main(final Script script, final String[] args)
     {
         ContextFactory.getGlobal().call(cx -> {
@@ -372,42 +247,29 @@ public final class OptRuntime extends ScriptRuntime
         });
     }
 
-    /**
-     * <p>throwStopIteration.</p>
-     *
-     * @param obj a {@link java.lang.Object} object.
-     */
-    public static void throwStopIteration(Object obj) {
-        throw new JavaScriptException(
-            NativeIterator.getStopIterationObject((Scriptable)obj), "", 0);
+    public static void throwStopIteration(Object scope, Object genState) {
+        Object value = getGeneratorReturnValue(genState);
+        Object si =
+            (value == Undefined.instance) ?
+              NativeIterator.getStopIterationObject((Scriptable)scope) :
+              new NativeIterator.StopIteration(value);
+        throw new JavaScriptException(si, "", 0);
     }
 
-    /**
-     * <p>createNativeGenerator.</p>
-     *
-     * @param funObj a {@link org.mozilla.javascript.NativeFunction} object.
-     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
-     * @param thisObj a {@link org.mozilla.javascript.Scriptable} object.
-     * @param maxLocals a int.
-     * @param maxStack a int.
-     * @return a {@link org.mozilla.javascript.Scriptable} object.
-     */
     public static Scriptable createNativeGenerator(NativeFunction funObj,
                                                    Scriptable scope,
                                                    Scriptable thisObj,
                                                    int maxLocals,
                                                    int maxStack)
     {
-        return new NativeGenerator(scope, funObj,
-                new GeneratorState(thisObj, maxLocals, maxStack));
+        GeneratorState gs = new GeneratorState(thisObj, maxLocals, maxStack);
+        if (Context.getCurrentContext().getLanguageVersion() >= Context.VERSION_ES6) {
+            return new ES6Generator(scope, funObj, gs);
+        } else {
+            return new NativeGenerator(scope, funObj, gs);
+        }
     }
 
-    /**
-     * <p>getGeneratorStackState.</p>
-     *
-     * @param obj a {@link java.lang.Object} object.
-     * @return an array of {@link java.lang.Object} objects.
-     */
     public static Object[] getGeneratorStackState(Object obj) {
         GeneratorState rgs = (GeneratorState) obj;
         if (rgs.stackState == null)
@@ -415,12 +277,6 @@ public final class OptRuntime extends ScriptRuntime
         return rgs.stackState;
     }
 
-    /**
-     * <p>getGeneratorLocalsState.</p>
-     *
-     * @param obj a {@link java.lang.Object} object.
-     * @return an array of {@link java.lang.Object} objects.
-     */
     public static Object[] getGeneratorLocalsState(Object obj) {
         GeneratorState rgs = (GeneratorState) obj;
         if (rgs.localsState == null)
@@ -428,14 +284,26 @@ public final class OptRuntime extends ScriptRuntime
         return rgs.localsState;
     }
 
+    public static void setGeneratorReturnValue(Object obj, Object val) {
+        GeneratorState rgs = (GeneratorState) obj;
+        rgs.returnValue = val;
+    }
+
+    public static Object getGeneratorReturnValue(Object obj) {
+        GeneratorState rgs = (GeneratorState) obj;
+        return (rgs.returnValue == null ? Undefined.instance : rgs.returnValue);
+    }
+
     public static class GeneratorState {
         static final String CLASS_NAME =
             "org/mozilla/javascript/optimizer/OptRuntime$GeneratorState";
 
+        @SuppressWarnings("unused")
         public int resumptionPoint;
         static final String resumptionPoint_NAME = "resumptionPoint";
         static final String resumptionPoint_TYPE = "I";
 
+        @SuppressWarnings("unused")
         public Scriptable thisObj;
         static final String thisObj_NAME = "thisObj";
         static final String thisObj_TYPE =
@@ -445,6 +313,7 @@ public final class OptRuntime extends ScriptRuntime
         Object[] localsState;
         int maxLocals;
         int maxStack;
+        Object returnValue;
 
         GeneratorState(Scriptable thisObj, int maxLocals, int maxStack) {
             this.thisObj = thisObj;
